...
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setImage(UIImage(systemName: "heart")?.withRenderingMode(.alwaysTemplate), for: .normal)
        button.setImage(UIImage(systemName: "heart.fill")?.withRenderingMode(.alwaysTemplate), for: .selected)
        button.tintColor = .secondaryLabel // Match bookmark color
        button.adjustsImageWhenHighlighted = false
        button.addTarget(self, action: #selector(heartButtonTapped), for: .touchUpInside)
        button.accessibilityLabel = "Heart"
        return button
    }()
    
    private let heartCountLabel: UILabel = {
        let label = UILabel()
        label.translatesAutoresizingMaskIntoConstraints = false
...
