...
    "collections_from_friends" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "From Friends"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "友達から"
...
    "google_login" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue with Google"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Googleで続ける"
...
